# udemy

./: CMakeLists.txt
exercice/ASCII/: main.c
exercice/adresses_et_variables/: main.c
exercice/afficher_fichier/: main.c
exercice/carte_identite/: main.c
exercice/code_PIN/: main.c
exercice/lanceur_des/: main.c
exercice/pair_ou_impair/: main.c
exercice/point/: main.c
exercice/tableau_et_adresse/: main.c
exercice/variable_dynamique/: main.c
tp10_preoprocesseur/: main.c
tp11_programmation_modulaire/: main.c
tp12_types_personnalisés/: main.c
tp13_gestion_de_fichiers/: main.c
tp1_syntaxe_et_structure/: main.c
tp2_memoire_et_variable/: main.c
tp3_operations_sur_variables/: main.c
tp4_complement_sur_variable/: main.c
tp4_pair_ou_impair/: main.c
tp5_conditions/: main.c
tp6_boucles/: main.c
tp7_tableaux/: main.c
tp8_strings/: main.c
tp9_fonctions/: main.c
