cmake_minimum_required(VERSION 3.10)
project(udemy C)

set(CMAKE_C_STANDARD 99)

add_executable(tp1 tp1_syntaxe_et_structure/main.c)
add_executable(tp2 tp2_memoire_et_variable/main.c)
add_executable(tp3 tp3_operations_sur_variables/main.c)
add_executable(tp4 tp4_pair_ou_impair/main.c)
add_executable(tp5 tp5_conditions/main.c)