cmake_minimum_required(VERSION 3.10)
project(udemy C)

set(CMAKE_C_STANDARD 99)

add_executable(adresses exercice/adresses_et_variables/main.c)
add_executable(ASCII exercice/ASCII/main.c)
add_executable(pair exercice/pair_ou_impair/main.c)
add_executable(PIN exercice/code_PIN/main.c)
add_executable(tp1 tp1_syntaxe_et_structure/main.c)
add_executable(tp2 tp2_memoire_et_variable/main.c)
add_executable(tp3 tp3_operations_sur_variables/main.c)
add_executable(tp4 tp4_complement_sur_variable/main.c)
add_executable(tp5 tp5_conditions/main.c)
add_executable(tp6 tp6_boucles/main.c)
add_executable(tp7 tp7_tableaux/main.c)
add_executable(tp8 tp8_strings/main.c)
add_executable(tp9 tp9_fonctions/main.c)
add_executable(tp10 tp10_preoprocesseur/main.c)
add_executable(tp11 tp11_programmation_modulaire/main.c)
add_executable(tp12 tp12_types_personnalisés/main.c)
add_executable(tp13 tp13_gestion_de_fichiers/main.c)